# libassert

./: .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CPPLINT.cfg  Changelog.md  LICENSE  Makefile  README.md  bar.cpp  demo.cpp  foo.cpp  lint.sh  sonar-project.properties
.github/workflows/: build-20.yml  build.yml  ci.yml  clang-tidy.yml  cmake-integration.yml  cpplint.yml  lint.yml  sonarlint.yml  test-20.yml  tests.yml
cmake/: InstallRules.cmake  OptionVariables.cmake  PreventInSourceBuilds.cmake  ProjectIsTopLevel.cmake  assert-config.cmake.in
cmake/in/: assert-config-cmake.in  libassert-config-cmake.in  version-hpp.in
include/: assert.hpp
include/assert/: assert.hpp
include/libassert/: assert-catch2-macros.hpp  assert-catch2.hpp  assert-gtest-macros.hpp  assert-gtest.hpp  assert-macros.hpp  assert.hpp  expression-decomposition.hpp  expression_decomposition.hpp  libassert_internal.hpp  platform.hpp  stringification.hpp  utilities.hpp
src/: analysis.cpp  analysis.hpp  assert.cpp  common.hpp  formatting_and_type_tools.cpp  libassert.cppm  microfmt.hpp  paths.cpp  paths.hpp  platform.cpp  platform.hpp  printing.cpp  printing.hpp  stringification.cpp  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  Makefile  assert.hpp  ci-wrapper.py  cmake.sh  demo.cpp  disambiguation.cpp  dump_msvc_env.ps1  generate_outputs.py  integration_diff.py  run-tests.py  tokens_and_highlighting.cpp
tests/add_subdirectory-integration/: CMakeLists.txt  main.cpp
tests/basic/: basic_test.cpp
tests/binaries/: basic_demo.cpp  catch2-demo.cpp  gtest-demo.cpp  tokens_and_highlighting.cpp
tests/cmake_client/: CMakeLists.txt  main.cpp
tests/demo/: bar.cpp  demo.cpp  foo.cpp
tests/demo/baz/: demo.cpp
tests/fetchcontent-integration/: CMakeLists.txt  main.cpp
tests/findpackage-integration/: CMakeLists.txt  main.cpp
tests/integration/: a.cpp  integration.cpp
tests/integration/expected/: clang.macos.txt  clang.txt  clang.windows.txt  clang_windows.txt  gcc.txt  gcc_windows.txt  gnu.macos.txt  gnu.txt  gnu.windows.txt  msvc.txt
tests/integration/x/: a.cpp
tests/library-usage/cmake-fetch-content/: CMakeLists.txt  main.cpp
tests/library-usage/cmake-find-package/: CMakeLists.txt
tests/pyutils/: utils.py
tests/unit/: assertion_tests.cpp  basic_test.cpp  catch2-test.cpp  constexpr_contexts.cpp  disambiguation.cpp  fmt-test.cpp  lexer.cpp  literals.cpp  std_format20.cpp  std_format23.cpp  stringify.cpp  test_public_utilities.cpp  test_type_prettier.cpp  tokens_and_highlighting.cpp  type_handling.cpp
tests/unit/test_files/: test_program._cpp
